# chainlit

./: Dockerfile  README.md  chatbot.py  pyproject.toml
.chainlit/: config.toml
backend/: Dockerfile  README.md  app.py  requirements.txt
frontend/: index.html  script.js  style.css
public/: custom.css  custom.js
src/first_agent/: app.py
